# FractalImageGenerator

./: CMakeLists.txt
Fractal/: CMakeLists.txt  ColourSet.cpp  ColourSet.h  Complex.cpp  Complex.h  FractalImageGenerator.cpp  FractalImageGenerator.h  Main.cpp
FractalImageGenerator/: Bounds.h  CMakeLists.txt  ColourSet.cpp  ColourSet.h  FractalImageGenerator.cpp  FractalImageGenerator.h  Main.cpp
